Chuyển lib vào file chính

--- a/html/index.html
+++ b/html/index.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="/html/img/ico.ico">
+    <link rel="icon" type="image/png" href="img/ico.ico">
     <title>AKS Việt Nam</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" />
-    <link rel="stylesheet" href="/html/CSS/all.css">
-    <link rel="stylesheet" href="/html/CSS/style.css">
+    <link rel="stylesheet" href="CSS/all.css">
+    <link rel="stylesheet" href="CSS/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" />
@@ -27,14 +27,14 @@
 <body>
     <!-- Start header -->
     <div class="header-top">
-        <a href="/html/aboutUs.html" class="email">Giới thiệu |</a>
-        <a href="/html/Contact.html" class="email">Liên hệ</a>
+        <a href="aboutUs.html" class="email">Giới thiệu |</a>
+        <a href="Contact.html" class="email">Liên hệ</a>
     </div>
 
     <div class="header-main">
         <div class="logo-container">
-            <a href="/html/index.html">
-                <img src="/html/img/logo-ask-removebg-preview.png" class="logo" alt="AKS Vietnam Logo">
+            <a href="index.html">
+                <img src="img/logo-ask-removebg-preview.png" class="logo" alt="AKS Vietnam Logo">
             </a>
         </div>
     </div>
@@ -45,7 +45,7 @@
             <div id="header-carousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img class="w-100" src="/html/img/Banner/security.jpg" alt="Image">
+                        <img class="w-100" src="img/Banner/security.jpg" alt="Image">
                         <div class="carousel-caption">
                             <div class="container">
                                 <div class="row justify-content-center">
@@ -55,7 +55,7 @@
                                             thuật hàng đầu, bao gồm hệ thống giám sát, cảnh báo an ninh cho ngôi
                                             nhà, giám sát và điều khiển từ xa hệ thống mạng lưới, hỗ trợ kỹ thuật và
                                             an ninh trực tuyến và tại chỗ cho các tòa nhà và đơn vị.</p>
-                                        <a href="/html/aboutUs.html"
+                                        <a href="aboutUs.html"
                                             class="btn btn-primary py-3 px-5 animated slideInRight">Tìm hiểu
                                             thêm</a>
                                     </div>
@@ -64,7 +64,7 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img class="w-100" src="/html/img/Banner/slide1.jpg" alt="Image">
+                        <img class="w-100" src="img/Banner/slide1.jpg" alt="Image">
                         <div class="carousel-caption">
                             <div class="container">
                                 <div class="row justify-content-center">
@@ -74,7 +74,7 @@
                                             thuật hàng đầu, bao gồm hệ thống giám sát, cảnh báo an ninh cho ngôi
                                             nhà, giám sát và điều khiển từ xa hệ thống mạng lưới, hỗ trợ kỹ thuật và
                                             an ninh trực tuyến và tại chỗ cho các tòa nhà và đơn vị.</p>
-                                        <a href="/html/aboutUs.html"
+                                        <a href="aboutUs.html"
                                             class="btn btn-primary py-3 px-5 animated slideInLeft">Tìm hiểu
                                             thêm</a>
                                     </div>
@@ -111,7 +111,7 @@
                         </div>
                         <h5 class="mb-4">Dịch vụ quan trắc khí tượng thủy văn</h5>
                         <a class="btn btn-primary rounded-pill py-2 px-4 mt-auto"
-                            href="/html/solution/solution.html?thietBiQuanTrac">Tìm hiểu thêm</a>
+                            href="solution/solution.html?thietBiQuanTrac">Tìm hiểu thêm</a>
                     </div>
                 </div>
                 <div class="text-center col-6 col-sm-6 col-md-6 col-lg-3">
@@ -121,7 +121,7 @@
                         </div>
                         <h5 class="mb-4">Hệ thống phòng cháy chữa cháy</h5>
                         <a class="btn btn-primary rounded-pill py-2 px-4 mt-auto"
-                            href="/html/solution/solution.html?giaiPhapBaoChay">Tìm hiểu thêm</a>
+                            href="solution/solution.html?giaiPhapBaoChay">Tìm hiểu thêm</a>
                     </div>
                 </div>
                 <div class="text-center col-6 col-sm-6 col-md-6 col-lg-3">
@@ -131,7 +131,7 @@
                         </div>
                         <h5 class="mb-4">Dịch vụ an ninh</h5>
                         <a class="btn btn-primary rounded-pill py-2 px-4 mt-auto"
-                            href="/html/Security/security.html">Tìm hiểu thêm</a>
+                            href="Security/security.html">Tìm hiểu thêm</a>
                     </div>
                 </div>
                 <div class="text-center col-6 col-sm-6 col-md-6 col-lg-3">
@@ -141,7 +141,7 @@
                         </div>
                         <h5 class="mb-4">Dịch vụ kỹ thuật tòa nhà</h5>
                         <a class="btn btn-primary rounded-pill py-2 px-4 mt-auto"
-                            href="/html/buildingServices/bms.html">Tìm hiểu thêm</a>
+                            href="buildingServices/bms.html">Tìm hiểu thêm</a>
                     </div>
                 </div>
             </div>
@@ -230,10 +230,10 @@
     <div id="footer-container"></div>
 
     <!-- JavaScript Libraries -->
-    <script src="/html/js/All/all.js"></script>
+    <script src="js/All/all.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="/lib/owlcarousel/owl.carousel.min.js"></script>
-    <script src="/html/js/News/news.js"></script>
+    <script src="js/News/news.js"></script>
 </body>
 
 </html>
