Test thay đổi đường dẫn

--- a/html/product/productDetail.html
+++ b/html/product/productDetail.html
@@ -11,9 +11,9 @@
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/CSS/all.css">
-    <link rel="icon" type="image/png" href="/html/img/ico.ico">
+    <link rel="icon" type="image/png" href="img/ico.ico">
     <title>Chi tiết sản phẩm</title>
-    <script src="/html/js/All/all.js"></script>
+    <script src="js/All/all.js"></script>
 </head>
 
 <body>
@@ -24,8 +24,8 @@
 
     <div class="header-main">
         <div class="logo-container">
-            <a href="/html/index.html">
-                <img src="/html/img/logo-ask-removebg-preview.png" class="logo" alt="AKS Vietnam Logo">
+            <a href="index.html">
+                <img src="img/logo-ask-removebg-preview.png" class="logo" alt="AKS Vietnam Logo">
             </a>
         </div>
     </div>
@@ -51,7 +51,7 @@
             </div>
         </div>
     </section>
-    <script type="module" src="/html/js/Product/viewproduct.js"></script>
+    <script type="module" src="js/Product/viewproduct.js"></script>
 
     <!-- Footer -->
     <div id="footer-container"></div>
