--- a/html/HomePage/NewsDoc.html
+++ b/html/HomePage/NewsDoc.html
@@ -10,10 +10,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/html/CSS/all.css">
-    <link rel="icon" type="image/png" href="/html/img/ico.ico">
+    <link rel="stylesheet" href="CSS/all.css">
+    <link rel="icon" type="image/png" href="img/ico.ico">
     <title>Chi tiết sản phẩm</title>
-    <script src="/html/js/All/all.js"></script>
+    <script src="js/All/all.js"></script>
 </head>
 
 <body>
@@ -24,8 +24,8 @@
 
     <div class="header-main">
         <div class="logo-container">
-            <a href="/html/index.html">
-                <img src="/html/img/logo-ask-removebg-preview.png" class="logo" alt="AKS Vietnam Logo">
+            <a href="index.html">
+                <img src="img/logo-ask-removebg-preview.png" class="logo" alt="AKS Vietnam Logo">
             </a>
         </div>
     </div>
@@ -53,7 +53,7 @@
         </section>
     </main>
 
-    <script type="module" src="/html/js/News/news.js"></script>
+    <script type="module" src="js/News/news.js"></script>
 
     <!-- Footer -->
     <div id="footer-container"></div>
