--- a/html/Security/security.html
+++ b/html/Security/security.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dịch vụ an ninh</title>
-    <link rel="icon" type="image/png" href="/html/img/ico.ico">
+    <link rel="icon" type="image/png" href="img/ico.ico">
     <link rel="stylesheet" href="/CSS/all.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -13,9 +13,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/html/CSS/bms.css">
-    <link rel="stylesheet" href="/html/CSS/security.css">
-    <script src="/html/js/All/all.js"></script>
+    <link rel="stylesheet" href="CSS/bms.css">
+    <link rel="stylesheet" href="CSS/security.css">
+    <script src="js/All/all.js"></script>
 </head>
 
 <body>
@@ -26,8 +26,8 @@
 
     <div class="header-main">
         <div class="logo-container">
-            <a href="/html/index.html">
-                <img src="/html/img/logo-ask-removebg-preview.png" class="logo" alt="AKS Vietnam Logo">
+            <a href="index.html">
+                <img src="img/logo-ask-removebg-preview.png" class="logo" alt="AKS Vietnam Logo">
             </a>
         </div>
     </div>
@@ -46,7 +46,7 @@
         </div>
 
         <div class="text-center mt-5">
-            <a href="/html/product/product.html?thietBiCanhBao" class="btn btn-primary btn-lg">Thiết bị giám sát</a>
+            <a href="product/product.html?thietBiCanhBao" class="btn btn-primary btn-lg">Thiết bị giám sát</a>
         </div>
     </section>
 
@@ -55,7 +55,7 @@
 
 
     <!-- JavaScript -->
-    <script type="module" src="/html/js/Security/securityService.js"></script>
+    <script type="module" src="js/Security/securityService.js"></script>
 </body>
 
 </html>
