--- a/html/Tech/aboutTech.html
+++ b/html/Tech/aboutTech.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="/html/img/ico.ico">
+    <link rel="icon" type="image/png" href="img/ico.ico">
     <title>Công nghệ áp dụng</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
-    <link rel="stylesheet" href="/html/CSS/all.css">
-    <link rel="stylesheet" href="/html/CSS/tech.css">
-    <script src="/html/js/All/all.js"></script>
+    <link rel="stylesheet" href="CSS/all.css">
+    <link rel="stylesheet" href="CSS/tech.css">
+    <script src="js/All/all.js"></script>
 </head>
 
 <body>
@@ -22,8 +22,8 @@
 
     <div class="header-main">
         <div class="logo-container">
-            <a href="/html/index.html">
-                <img src="/html/img/logo-ask-removebg-preview.png" class="logo" alt="AKS Vietnam Logo">
+            <a href="index.html">
+                <img src="img/logo-ask-removebg-preview.png" class="logo" alt="AKS Vietnam Logo">
             </a>
         </div>
     </div>
@@ -96,7 +96,7 @@
             <!-- Phần bên phải -->
             <div class="col-md-6 right-section">
                 <div class="illustration">
-                    <img id="illustrationImage" src="/html/img/Products/Tech/1.png" alt="Minh họa năng lượng">
+                    <img id="illustrationImage" src="img/Products/Tech/1.png" alt="Minh họa năng lượng">
                 </div>
             </div>
         </div>
@@ -123,7 +123,7 @@
                 </div>
                 <div class="video-container">
                     <video id="deviceVideo" autoplay muted>
-                        <source src="/html/img/Products/Tech/6.mp4" type="video/mp4">
+                        <source src="img/Products/Tech/6.mp4" type="video/mp4">
                         Trình duyệt của bạn không hỗ trợ video
                     </video>
                 </div>
@@ -138,7 +138,7 @@
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/html/js/Tech/fireTech.js"></script>
+    <script src="js/Tech/fireTech.js"></script>
 </body>
 
 </html>
