--- a/html/aboutUs.html
+++ b/html/aboutUs.html
@@ -4,16 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="/html/img/ico.ico">
+    <link rel="icon" type="image/png" href="img/ico.ico">
     <title>Giới thiệu</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" />
-    <link rel="stylesheet" href="/html/CSS/all.css">
-    <link rel="stylesheet" href="/html/CSS/aboutUS.css">
+    <link rel="stylesheet" href="CSS/all.css">
+    <link rel="stylesheet" href="CSS/aboutUS.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/html/js/All/all.js"></script>
+    <script src="js/All/all.js"></script>
 </head>
 
 <body>
@@ -24,8 +24,8 @@
 
     <div class="header-main">
         <div class="logo-container">
-            <a href="/html/index.html">
-                <img src="/html/img/logo-ask-removebg-preview.png" class="logo" alt="AKS Vietnam Logo">
+            <a href="index.html">
+                <img src="img/logo-ask-removebg-preview.png" class="logo" alt="AKS Vietnam Logo">
             </a>
         </div>
     </div>
@@ -48,10 +48,10 @@
                 <div class="col-md-6 col-lg-4 wow fadeIn" data-wow-delay=".5s">
                     <div class="project-item">
                         <div class="project-img">
-                            <img src="/html/img/Banner/AboutWeather.jpg" class="img-fluid rounded" alt=""
+                            <img src="img/Banner/AboutWeather.jpg" class="img-fluid rounded" alt=""
                                 style="width: 100%; height: 250px; object-fit: cover;">
                             <div class="project-content">
-                                <a href="/html/solution/solution.html?thietBiQuanTrac" class="text-center">
+                                <a href="solution/solution.html?thietBiQuanTrac" class="text-center">
                                     <h5>Dịch vụ quan trắc khí tượng thủy văn</h5>
                                 </a>
                             </div>
@@ -61,10 +61,10 @@
                 <div class="col-md-6 col-lg-4 wow fadeIn" data-wow-delay=".3s">
                     <div class="project-item">
                         <div class="project-img">
-                            <img src="/html/img/Banner/AboutFire.jpg" class="img-fluid rounded" alt=""
+                            <img src="img/Banner/AboutFire.jpg" class="img-fluid rounded" alt=""
                                 style="width: 100%; height: 250px; object-fit: cover;">
                             <div class="project-content">
-                                <a href="/html/solution/solution.html?giaiPhapBaoChay" class="text-center">
+                                <a href="solution/solution.html?giaiPhapBaoChay" class="text-center">
                                     <h5>Hệ thống phòng cháy chữa cháy</h5>
                                 </a>
                             </div>
@@ -74,10 +74,10 @@
                 <div class="col-md-6 col-lg-4 wow fadeIn" data-wow-delay=".7s">
                     <div class="project-item">
                         <div class="project-img">
-                            <img src="/html/img/Banner/AboutSecurity.jpg" class="img-fluid rounded" alt=""
+                            <img src="img/Banner/AboutSecurity.jpg" class="img-fluid rounded" alt=""
                                 style="width: 100%; height: 250px; object-fit: cover;">
                             <div class="project-content">
-                                <a href="/html/Security/security.html" class="text-center">
+                                <a href="Security/security.html" class="text-center">
                                     <h5>Dịch vụ an ninh</h5>
                                 </a>
                             </div>
@@ -87,10 +87,10 @@
                 <div class="col-md-6 col-lg-4 wow fadeIn" data-wow-delay=".3s">
                     <div class="project-item">
                         <div class="project-img">
-                            <img src="/html/img/Banner/AboutBms.jpg" class="img-fluid rounded" alt=""
+                            <img src="img/Banner/AboutBms.jpg" class="img-fluid rounded" alt=""
                                 style="width: 100%; height: 250px; object-fit: cover;">
                             <div class="project-content">
-                                <a href="/html/buildingServices/bms.html" class="text-center">
+                                <a href="buildingServices/bms.html" class="text-center">
                                     <h5>Dịch vụ kỹ thuật tòa nhà</h5>
                                 </a>
                             </div>
@@ -163,7 +163,7 @@
             <div class="col-6 col-md-4 col-lg-2">
                 <div class="card border-0 shadow partner-card">
                     <div class="card-body d-flex justify-content-center align-items-center">
-                        <img src="/html/img/Banner/sponsorsLogo-hinoMotors-removebg-preview.png" alt="Đối tác 1"
+                        <img src="img/Banner/sponsorsLogo-hinoMotors-removebg-preview.png" alt="Đối tác 1"
                             class="partner-logo">
                     </div>
                 </div>
@@ -171,14 +171,14 @@
             <div class="col-6 col-md-4 col-lg-2">
                 <div class="card border-0 shadow partner-card">
                     <div class="card-body d-flex justify-content-center align-items-center">
-                        <img src="/html/img/Banner/spindex-removebg-preview.png" alt="Đối tác 2" class="partner-logo">
+                        <img src="img/Banner/spindex-removebg-preview.png" alt="Đối tác 2" class="partner-logo">
                     </div>
                 </div>
             </div>            
             <div class="col-6 col-md-4 col-lg-2">
                 <div class="card border-0 shadow partner-card">
                     <div class="card-body d-flex justify-content-center align-items-center">
-                        <img src="/html/img/Banner/logo_khudothiecopark1-removebg-preview.png" alt="Đối tác 3"
+                        <img src="img/Banner/logo_khudothiecopark1-removebg-preview.png" alt="Đối tác 3"
                             class="partner-logo">
                     </div>
                 </div>
@@ -186,7 +186,7 @@
             <div class="col-6 col-md-4 col-lg-2">
                 <div class="card border-0 shadow partner-card">
                     <div class="card-body d-flex justify-content-center align-items-center">
-                        <img src="/html/img/Banner/Cheil_Jedang_logo-removebg-preview.png" alt="Đối tác 4"
+                        <img src="img/Banner/Cheil_Jedang_logo-removebg-preview.png" alt="Đối tác 4"
                             class="partner-logo">
                     </div>
                 </div>
@@ -194,14 +194,14 @@
             <div class="col-6 col-md-4 col-lg-2">
                 <div class="card border-0 shadow partner-card">
                     <div class="card-body d-flex justify-content-center align-items-center">
-                        <img src="/html/img/Banner/keyoei-removebg-preview.png" alt="Đối tác 5" class="partner-logo">
+                        <img src="img/Banner/keyoei-removebg-preview.png" alt="Đối tác 5" class="partner-logo">
                     </div>
                 </div>
             </div>            
             <div class="col-6 col-md-4 col-lg-2">
                 <div class="card border-0 shadow partner-card">
                     <div class="card-body d-flex justify-content-center align-items-center">
-                        <img src="/html/img/Banner/aeon-logo-png-transparent-removebg-preview.png" alt="Đối tác 6"
+                        <img src="img/Banner/aeon-logo-png-transparent-removebg-preview.png" alt="Đối tác 6"
                             class="partner-logo">
                     </div>
                 </div>
