--- a/html/Tech/electricTech.html
+++ b/html/Tech/electricTech.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="img/ico.ico">
+    <link rel="icon" type="image/png" href="../img/ico.ico">
     <title>Công nghệ</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
-    <link rel="stylesheet" href="CSS/all.css">
-    <link rel="stylesheet" href="CSS/tech.css">
-    <script src="js/All/all.js"></script>
+    <link rel="stylesheet" href="../CSS/all.css">
+    <link rel="stylesheet" href="../CSS/tech.css">
+    <script src="../js/All/all.js"></script>
 </head>
 
 <body>
@@ -75,7 +75,7 @@
             <!-- Phần bên phải -->
             <div class="col-md-6 right-section">
                 <div class="illustration">
-                    <img id="illustrationImage" src="img/Products/Tech/1.png" alt="Minh họa năng lượng">
+                    <img id="illustrationImage" src="../img/Products/Tech/1.png" alt="Minh họa năng lượng">
                 </div>
             </div>
         </div>
@@ -102,7 +102,7 @@
                     </div>
                     <div class="video-container">
                         <video id="deviceVideo" autoplay muted>
-                            <source src="img/Products/Tech/6.mp4" type="video/mp4">
+                            <source src="../img/Products/Tech/6.mp4" type="video/mp4">
                             Trình duyệt của bạn không hỗ trợ video
                         </video>
                     </div>
@@ -129,7 +129,7 @@
                     </div>
                     <div class="video-container">
                         <video id="energyVideo" autoplay muted>
-                            <source src="img/Products/Tech/5.mp4" type="video/mp4">
+                            <source src="../img/Products/Tech/5.mp4" type="video/mp4">
                             Trình duyệt của bạn không hỗ trợ video
                         </video>
                     </div>
@@ -143,7 +143,7 @@
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="js/Tech/fireTech.js"></script>
+    <script src="../js/Tech/fireTech.js"></script>
 </body>
 
 </html>
