--- a/html/aboutUs.html
+++ b/html/aboutUs.html
@@ -7,13 +7,13 @@
     <link rel="icon" type="image/png" href="img/ico.ico">
     <title>Giới thiệu</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" />
-    <link rel="stylesheet" href="CSS/all.css">
-    <link rel="stylesheet" href="CSS/aboutUS.css">
+    <link rel="stylesheet" href="../CSS/all.css">
+    <link rel="stylesheet" href="../CSS/aboutUS.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="js/All/all.js"></script>
+    <script src="../js/All/all.js"></script>
 </head>
 
 <body>
@@ -25,7 +25,7 @@
     <div class="header-main">
         <div class="logo-container">
             <a href="index.html">
-                <img src="img/logo-ask-removebg-preview.png" class="logo" alt="AKS Vietnam Logo">
+                <img src="../img/logo-ask-removebg-preview.png" class="logo" alt="AKS Vietnam Logo">
             </a>
         </div>
     </div>
