--- a/html/buildingServices/bmsTemplate.html
+++ b/html/buildingServices/bmsTemplate.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="CSS/all.css">
+    <link rel="stylesheet" href="../CSS/all.css">
     <link rel="icon" type="image/png" href="img/ico.ico">
-    <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+    <link href="../assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 </head>
 
 <body>
@@ -22,7 +22,7 @@
     <div class="header-main">
         <div class="logo-container">
             <a href="index.html">
-                <img src="img/logo-ask-removebg-preview.png" class="logo" alt="AKS Vietnam Logo">
+                <img src="../img/logo-ask-removebg-preview.png" class="logo" alt="AKS Vietnam Logo">
             </a>
         </div>
     </div>
@@ -45,9 +45,9 @@
     <!-- Footer -->
     <div id="footer-container"></div>
 
-    <script type="module" src="js/BuildingService/viewBMS.js"></script>
-    <script src="js/All/all.js"></script>
-    <script src="js/Tech/fireTech.js"></script>
+    <script type="module" src="../js/BuildingService/viewBMS.js"></script>
+    <script src="../js/All/all.js"></script>
+    <script src="../js/Tech/fireTech.js"></script>
 </body>
 
 </html>
