--- a/html/product/productDetail.html
+++ b/html/product/productDetail.html
@@ -10,10 +10,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/CSS/all.css">
-    <link rel="icon" type="image/png" href="img/ico.ico">
+    <link rel="stylesheet" href="../CSS/all.css">
+    <link rel="icon" type="image/png" href="../img/ico.ico">
     <title>Chi tiết sản phẩm</title>
-    <script src="js/All/all.js"></script>
+    <script src="../js/All/all.js"></script>
 </head>
 
 <body>
@@ -25,7 +25,7 @@
     <div class="header-main">
         <div class="logo-container">
             <a href="index.html">
-                <img src="img/logo-ask-removebg-preview.png" class="logo" alt="AKS Vietnam Logo">
+                <img src="../img/logo-ask-removebg-preview.png" class="logo" alt="AKS Vietnam Logo">
             </a>
         </div>
     </div>
@@ -51,7 +51,7 @@
             </div>
         </div>
     </section>
-    <script type="module" src="js/Product/viewproduct.js"></script>
+    <script type="module" src="../js/Product/viewproduct.js"></script>
 
     <!-- Footer -->
     <div id="footer-container"></div>
