--- a/html/buildingServices/bms.html
+++ b/html/buildingServices/bms.html
@@ -26,7 +26,7 @@
     <div class="header-main">
         <div class="logo-container">
             <a href="../index.html">
-                <img src="/img/logo-ask-removebg-preview.png" class="logo" alt="AKS Vietnam Logo">
+                <img src="https://res.cloudinary.com/di33kl2zd/image/upload/v1751967482/logo-ask-removebg-preview_oav1fi.png" class="logo" alt="AKS Vietnam Logo">
             </a>
         </div>
     </div>
