Update fireTech media link

--- a/html/Tech/aboutTech.html
+++ b/html/Tech/aboutTech.html
@@ -96,7 +96,7 @@
             <!-- Phần bên phải -->
             <div class="col-md-6 right-section">
                 <div class="illustration">
-                    <img id="illustrationImage" src="../img/Products/Tech/1.png" alt="Minh họa năng lượng">
+                    <img id="illustrationImage" src="https://res.cloudinary.com/di33kl2zd/image/upload/v1751967002/1_oodvjf.png" alt="Minh họa năng lượng">
                 </div>
             </div>
         </div>
@@ -123,7 +123,7 @@
                 </div>
                 <div class="video-container">
                     <video id="deviceVideo" autoplay muted>
-                        <source src="../img/Products/Tech/6.mp4" type="video/mp4">
+                        <source src="https://res.cloudinary.com/di33kl2zd/video/upload/v1751966972/6_dz8u6v.mp4" type="video/mp4">
                         Trình duyệt của bạn không hỗ trợ video
                     </video>
                 </div>
